syntax = "proto3";

option go_package = "educloud";

import "protos/grpc/status.proto";

service UserHomeworkService {
    rpc SendHomeworkSolution (Homework) returns (Status);
    rpc GetHomeworks (Status) returns (Homeworks);
}

message Homework {
    int32 homeworkUuid = 1;
    string url = 2;
    string mailTo = 3;
}

message Homeworks {
    repeated Homework homework = 1;
}